@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_cache: Make sure Vary processing handles multivalued Vary headers and
+     multivalued headers referred to via Vary. [Graham Leggett]
+
   *) mod_cache: When serving from cache, only the last header of a multivalued
      header was taken into account. Fixed. [Graham Leggett]
 
